--- a/debug_pod.yaml
+++ b/debug_pod.yaml
@@ -5,6 +5,6 @@ metadata:
 spec:
   containers:
     - name: debugger
-      image: ubuntu
+      image: tylerjbean/debug-pod
       command: ["/bin/bash", "-ec", "while :; do echo '.'; sleep 5 ; done"]
   restartPolicy: Never
