--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,3 +1,3 @@
 FROM alpine:latest
-RUN apk add --no-cache git curl bind-tools curl git
-ENTRYPOINT ["/bin/sh"]
+RUN apk add --no-cache git curl bind-tools curl git bash
+ENTRYPOINT ["/bin/bash"]
